# github-rust

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  index.html  search-index.js  stability.json
activity/: index.html  sidebar-items.js  struct.EventResponse.html  struct.IssueEventResponse.html  struct.Repository.html  type.IssueEventReturnType.html
activity/events/: fn.list_my_events.html  fn.list_my_organisation_events.html  fn.list_my_public_network_repo_events.html  fn.list_my_public_user_events.html  fn.list_my_received_events.html  fn.list_my_received_public_events.html  fn.list_received_public_user_events.html  fn.list_repo_issue_events.html  index.html  sidebar-items.js
client/: index.html  struct.Client.html
error/: struct.InternalError.html  struct.RequestError.html
examples/: public.rs
github/: sidebar-items.js  stability.html
github/activity/: enum.IssueEventType.html  index.html  sidebar-items.js  struct.Actor.html  struct.EventResponse.html  struct.IssueEventResponse.html  struct.Organisation.html  struct.Repository.html  type.EventReturnType.html  type.IssueEventReturnType.html
github/client/: sidebar-items.js
github/error/: enum.ClientError.html  enum.ErrorCode.html  enum.ErrorStatus.html  fn.check_status_code.html  index.html  sidebar-items.js  struct.ErrorContext.html
github/http/: fn.get.html  index.html  sidebar-items.js
github/response/: index.html  (+4 more)
http/: fn.get.html  index.html
response/: sidebar-items.js  struct.Rate.html  type.HttpHeaderType.html
src/: client.rs  error.rs  http.rs  lib.rs  response.rs
(+21 files in other folders)
