[package]

name = "github"
version = "0.1.2"
description = "A Rust GitHub v3 API client."
readme = "README.md"
documentation = "http://glendc.github.io/github-rust/github/index.html"
repository = "https://github.com/GlenDC/github-rust"
license = "MIT"
authors = ["glendc <decauwsemaecker.glen@gmail.com>"]
keywords = ["github", "api", "v3"]

[dependencies]
curl = "0.2"
rustc-serialize = "^0.3"
chrono = "0.2"
